# CFM

./: .gitignore  .version-lock  AGENTS.md  CHANGELOG.md  README.md  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/skills/sync-i18n-content/: SKILL.md
.github/workflows/: build.yml
locales/en/: messages.json  messages.po
locales/vi/: messages.json  messages.po
public/: single-instance.html  splashscreen.html
scripts/: version-upgrade.js
src/: app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: exit_coordinator.rs  lib.rs
src-tauri/src/app/: service.rs
src-tauri/src/commands/: app_env.rs  cfm.rs  database.rs  mod.rs  splash.rs
src-tauri/src/domain/: types.rs
src-tauri/src/process/: supervisor.rs
src/components/: footer.tsx  layout.tsx  settings-provider.tsx
src/components/ui/: dialog.tsx  resizable.tsx
src/features/cfm/: entries-list.tsx  entry-form.tsx  runtime-logs.tsx  settings-form.tsx  types.ts
src/features/titlebar/: mac-os-buttons.tsx  mac-os-titlebar.tsx  windows-buttons.tsx  windows-titlebar.tsx
src/features/updater/: version-display.tsx
src/lib/: app-locale.ts  entries-import-export.ts  entry-validation.ts  launch-at-login.ts  load-locale-catalog.ts  tauri-cfm.ts
src/lib/database/: access_entries.ts  app_settings.ts  db.ts  index.ts  migration.ts
src/pages/: home.tsx
