[package]
name = "cfm"
version = "0.6.3"
description = "cfm"
authors = ["mewisme"]
edition = "2021"

# Windows-only: dependencies are only linked when building for Windows.

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(target_os = "windows")'.build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri = { version = "2", features = [
  "devtools",
  "image-png",
  "tray-icon",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
chrono = "0.4"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"

[dependencies]
tauri-plugin-fs = "2"
